--- a/index.html
+++ b/index.html
@@ -3,54 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-Page Website</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <div id="sidebar">
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#updates">Updates</a></li>
-            <li><a href="#schedule">Schedule</a></li>
-            <li><a href="#suggestions">Suggestions</a></li>
-            <li><a href="#newsletter">Newsletter</a></li>
-            <li><a href="#links">Links</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="updates.html">Updates</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="suggestions.html">Suggestions</a></li>
+            <li><a href="newsletter.html">Newsletter</a></li>
+            <li><a href="links.html">Links</a></li>
         </ul>
     </div>
 
     <div id="content">
-        <section id="home">
+        <section>
             <h1>Welcome to the Home Page</h1>
             <p>This is the home page content.</p>
         </section>
-        
-        <section id="updates">
-            <h1>Updates</h1>
-            <p>This is the updates page content.</p>
-        </section>
-
-        <section id="schedule">
-            <h1>Schedule</h1>
-            <p>This is the schedule page content.</p>
-        </section>
-
-        <section id="suggestions">
-            <h1>Suggestions</h1>
-            <p>This is the suggestions page content.</p>
-        </section>
-
-        <section id="newsletter">
-            <h1>Newsletter</h1>
-            <p>This is the newsletter page content.</p>
-        </section>
-
-        <section id="links">
-            <h1>Links</h1>
-            <p>This is the links page content.</p>
-        </section>
     </div>
 
-    <script src="script.js"></script>
 </body>
 </html>
