--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
     <div id="content">
         <section>
-            <h1>Welcome to the Home Page</h1>
-            <p>This is the home page content.</p>
+            <h1>BLACKOUT</h1>
+            <p>Feel free to explore. The chat feature has not yet been implemented, so go here to chat:</p>
+            <a href="https://docs.google.com/document/d/1CE9NFP0mq8NufBMOsrh_jLF28dCgkmwmDZ4JvGkHqrA/edit?tab=t.0">Chat</a>
         </section>
     </div>
 
