--- a/updates.html
+++ b/updates.html
@@ -22,32 +22,31 @@
     <div id="content">
         <section>
             <h1>Updates</h1>
-            <p>Owen: this is where updates will be posted by me and will
-Owen: these will involve the new links page and others like events
-Owen: the first update is the upcoming schedule
-Owen: view this to see what updates are coming this week
-Owen: there is now a suggestions area
-Owen: leave your suggestions for the chat there
-Owen: there is also a newsletter where we post the latest important non-chat news
-Owen: finally there is a links page where we post new links to your favorite websites
-Owen: you can add link ideas in the suggestions box
-Owen: note: the chat will be cleared every day along with the suggestions after me and will review them
-Owen: the schedule and newsletter will be cleared after each week
-Owen: and finally when the links page gets to big we will remove it and put it on a separate document that we will link where it used to be, and the same will be done for the updates page
-Owen: you now can play the games we have made on github by copy and pasting the links
-Owen: if you want to invite a friend to the chat, you can ask for permission by labeling the name, email, and description
-Owen: everyone now has a job/rank
-Owen: your ranks will determine what you do and the color of your name/text
-Owen: if anyone is confused about their rank, ask me in the chat when it opens later today
-Owen: ranks are at the bottom
-Owen: i have opened up a march madness group-march madness is the college basketball tournament and you make brackets for it, you are required to participate and make at least one bracket or face punishment, bracketing is on the 17th, 18th, 19th and 20th
-Owen: there are now punishments listed below
-Owen: is now open to all: the grand opening is here
-Owen: new ranks for future members are out 
-Owen: we now have separate documents for updates, suggestions, and schedule
-Owen: we are reviewing our vortex links as some of them simply don’t work during school, expect to see some link spots open
-Owen: we currently have 7 link spots open for vortex-but those should be filled in soon anyway
-Owen: we now also have some new pizza edition links with more websites coming soon
+            <p>Owen: these will involve the new links page and others like events<br><br>
+                Owen: the first update is the upcoming schedule<br><br>
+                Owen: view this to see what updates are coming this week<br><br>
+                Owen: there is now a suggestions area<br><br>
+                Owen: leave your suggestions for the chat there<br><br>
+                Owen: there is also a newsletter where we post the latest important non-chat news<br><br>
+                Owen: finally there is a links page where we post new links to your favorite websites<br><br>
+                Owen: you can add link ideas in the suggestions box<br><br>
+                Owen: note: the chat will be cleared every day along with the suggestions after me and will review them<br><br>
+                Owen: the schedule and newsletter will be cleared after each week<br><br>
+                Owen: and finally when the links page gets too big we will remove it and put it on a separate document that we will link where it used to be, and the same will be done for the updates page<br><br>
+                Owen: you now can play the games we have made on github by copy and pasting the links<br><br>
+                Owen: if you want to invite a friend to the chat, you can ask for permission by labeling the name, email, and description<br><br>
+                Owen: everyone now has a job/rank<br><br>
+                Owen: your ranks will determine what you do and the color of your name/text<br><br>
+                Owen: if anyone is confused about their rank, ask me in the chat when it opens later today<br><br>
+                Owen: ranks are at the bottom<br><br>
+                Owen: i have opened up a march madness group-march madness is the college basketball tournament and you make brackets for it, you are required to participate and make at least one bracket or face punishment, bracketing is on the 17th, 18th, 19th and 20th<br><br>
+                Owen: there are now punishments listed below<br><br>
+                Owen: is now open to all: the grand opening is here<br><br>
+                Owen: new ranks for future members are out<br><br>
+                Owen: we now have separate documents for updates, suggestions, and schedule<br><br>
+                Owen: we are reviewing our vortex links as some of them simply don’t work during school, expect to see some link spots open<br><br>
+                Owen: we currently have 7 link spots open for vortex-but those should be filled in soon anyway<br><br>
+                Owen: we now also have some new pizza edition links with more websites coming soon<br><br>
 </p>
         </section>
     </div>
