--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section>
             <h1>BLACKOUT</h1>
             <p>Feel free to explore. The chat feature has not yet been implemented, so go here to chat:</p>
-            <a href="https://docs.google.com/document/d/1CE9NFP0mq8NufBMOsrh_jLF28dCgkmwmDZ4JvGkHqrA/edit?tab=t.0">Chat</a>
+            <a href="https://docs.google.com/document/d/1CE9NFP0mq8NufBMOsrh_jLF28dCgkmwmDZ4JvGkHqrA/edit?tab=t.0" class="link">Chat</a>
         </section>
     </div>
 
