--- a/links.html
+++ b/links.html
@@ -23,7 +23,7 @@
         <section>
             <h1>Updates</h1>
             <h6>Vortex</h6>
-        <ul>
+        <ul class="link">
             <li><a href="http://killthetapeworms.oops.wtf">killthetapeworms.oops.wtf</a></li>
   <li><a href="http://dashboard.fluxus.org">dashboard.fluxus.org</a></li>
   <li><a href="http://products.happyrobotics.com">products.happyrobotics.com</a></li>
