--- a/links.html
+++ b/links.html
@@ -22,22 +22,20 @@
     <div id="content">
         <section>
             <h1>Updates</h1>
-            <h6>Vortex</h6>
-        <ul class="link">
-            <li><a href="http://killthetapeworms.oops.wtf">killthetapeworms.oops.wtf</a></li>
-  <li><a href="http://dashboard.fluxus.org">dashboard.fluxus.org</a></li>
-  <li><a href="http://products.happyrobotics.com">products.happyrobotics.com</a></li>
-  <li><a href="http://follow.chicken.man.on.vortexdb.com.ar">follow.chicken.man.on.vortexdb.com.ar</a></li>
-  <li><a href="http://dps.farted.net">dps.farted.net</a></li>
-  <li><a href="http://school.blockers.farted.net">school.blockers.farted.net</a></li>
-  <li><a href="http://any.privatedns.org">any.privatedns.org</a></li>
-  <li><a href="http://heeheehee.evicly.pobbler.thesqueakandoilmanual.com">heeheehee.evicly.pobbler.thesqueakandoilmanual.com</a></li>
-  <li><a href="http://cetsmdrjnc.generaloweb.com">cetsmdrjnc.generaloweb.com</a></li>
-  <li><a href="http://powitbkotg.ocxpressit.com">powitbkotg.ocxpressit.com</a></li>
-  <li><a href="http://xsfwwwlfcx.musdi.web.id">xsfwwwlfcx.musdi.web.id</a></li>
-  <li><a href="http://gjprrpqpuk.meatbytes.com">gjprrpqpuk.meatbytes.com</a></li>
-  <li><a href="http://dashboard-no.2.fluxus.org">dashboard-no.2.fluxus.org</a></li>
-        </ul>
+            <h4>Vortex</h4>
+            <li><a href="http://killthetapeworms.oops.wtf">Link 1</a>
+  <a href="http://dashboard.fluxus.org">Link 2</a>
+  <a href="http://products.happyrobotics.com">Link 3</a>
+  <a href="http://follow.chicken.man.on.vortexdb.com.ar">Link 4</a>
+  <a href="http://dps.farted.net">dps.farted.net</a>
+  <a href="http://school.blockers.farted.net">school.blockers.farted.net</a>
+  <a href="http://any.privatedns.org">any.privatedns.org</a>
+  <a href="http://heeheehee.evicly.pobbler.thesqueakandoilmanual.com">heeheehee.evicly.pobbler.thesqueakandoilmanual.com</a>
+  <a href="http://cetsmdrjnc.generaloweb.com">cetsmdrjnc.generaloweb.com</a>
+  <a href="http://powitbkotg.ocxpressit.com">powitbkotg.ocxpressit.com</a>
+  <a href="http://xsfwwwlfcx.musdi.web.id">xsfwwwlfcx.musdi.web.id</a>
+  <a href="http://gjprrpqpuk.meatbytes.com">gjprrpqpuk.meatbytes.com</a>
+  <a href="http://dashboard-no.2.fluxus.org">dashboard-no.2.fluxus.org</a>
         </section>
     </div>
 
