--- a/links.html
+++ b/links.html
@@ -23,19 +23,19 @@
         <section>
             <h1>Updates</h1>
             <h4>Vortex</h4>
-            <li><a href="http://killthetapeworms.oops.wtf">Link 1</a>
-  <a href="http://dashboard.fluxus.org">Link 2</a>
-  <a href="http://products.happyrobotics.com">Link 3</a>
-  <a href="http://follow.chicken.man.on.vortexdb.com.ar">Link 4</a>
-  <a href="http://dps.farted.net">dps.farted.net</a>
-  <a href="http://school.blockers.farted.net">school.blockers.farted.net</a>
-  <a href="http://any.privatedns.org">any.privatedns.org</a>
-  <a href="http://heeheehee.evicly.pobbler.thesqueakandoilmanual.com">heeheehee.evicly.pobbler.thesqueakandoilmanual.com</a>
-  <a href="http://cetsmdrjnc.generaloweb.com">cetsmdrjnc.generaloweb.com</a>
-  <a href="http://powitbkotg.ocxpressit.com">powitbkotg.ocxpressit.com</a>
-  <a href="http://xsfwwwlfcx.musdi.web.id">xsfwwwlfcx.musdi.web.id</a>
-  <a href="http://gjprrpqpuk.meatbytes.com">gjprrpqpuk.meatbytes.com</a>
-  <a href="http://dashboard-no.2.fluxus.org">dashboard-no.2.fluxus.org</a>
+            <a href="http://killthetapeworms.oops.wtf">Link 1</a><br>
+            <a href="http://dashboard.fluxus.org">Link 2</a><br>
+            <a href="http://products.happyrobotics.com">Link 3</a><br>
+            <a href="http://follow.chicken.man.on.vortexdb.com.ar">Link 4</a><br>
+            <a href="http://dps.farted.net">dps.farted.net</a><br>
+            <a href="http://school.blockers.farted.net">school.blockers.farted.net</a><br>
+            <a href="http://any.privatedns.org">any.privatedns.org</a><br>
+            <a href="http://heeheehee.evicly.pobbler.thesqueakandoilmanual.com">heeheehee.evicly.pobbler.thesqueakandoilmanual.com</a><br>
+            <a href="http://cetsmdrjnc.generaloweb.com">cetsmdrjnc.generaloweb.com</a><br>
+            <a href="http://powitbkotg.ocxpressit.com">powitbkotg.ocxpressit.com</a><br>
+            <a href="http://xsfwwwlfcx.musdi.web.id">xsfwwwlfcx.musdi.web.id</a><br>
+            <a href="http://gjprrpqpuk.meatbytes.com">gjprrpqpuk.meatbytes.com</a><br>
+            <a href="http://dashboard-no.2.fluxus.org">dashboard-no.2.fluxus.org</a><br>
         </section>
     </div>
 
