--- a/links.html
+++ b/links.html
@@ -22,20 +22,24 @@
     <div id="content">
         <section>
             <h1>Updates</h1>
-            <h4>Vortex</h4>
+            <h3>Vortex</h3>
             <a href="http://killthetapeworms.oops.wtf">Link 1</a><br>
             <a href="http://dashboard.fluxus.org">Link 2</a><br>
             <a href="http://products.happyrobotics.com">Link 3</a><br>
             <a href="http://follow.chicken.man.on.vortexdb.com.ar">Link 4</a><br>
-            <a href="http://dps.farted.net">dps.farted.net</a><br>
-            <a href="http://school.blockers.farted.net">school.blockers.farted.net</a><br>
-            <a href="http://any.privatedns.org">any.privatedns.org</a><br>
-            <a href="http://heeheehee.evicly.pobbler.thesqueakandoilmanual.com">heeheehee.evicly.pobbler.thesqueakandoilmanual.com</a><br>
-            <a href="http://cetsmdrjnc.generaloweb.com">cetsmdrjnc.generaloweb.com</a><br>
-            <a href="http://powitbkotg.ocxpressit.com">powitbkotg.ocxpressit.com</a><br>
-            <a href="http://xsfwwwlfcx.musdi.web.id">xsfwwwlfcx.musdi.web.id</a><br>
-            <a href="http://gjprrpqpuk.meatbytes.com">gjprrpqpuk.meatbytes.com</a><br>
-            <a href="http://dashboard-no.2.fluxus.org">dashboard-no.2.fluxus.org</a><br>
+            <a href="http://dps.farted.net">Link 5</a><br>
+            <a href="http://school.blockers.farted.net">Link 6</a><br>
+            <a href="http://any.privatedns.org">Link 7</a><br>
+            <a href="http://heeheehee.evicly.pobbler.thesqueakandoilmanual.com">Link 8</a><br>
+            <a href="http://cetsmdrjnc.generaloweb.com">Link 9</a><br>
+            <a href="http://powitbkotg.ocxpressit.com">Link 10</a><br>
+            <a href="http://xsfwwwlfcx.musdi.web.id">Link 11</a><br>
+            <a href="http://gjprrpqpuk.meatbytes.com">Link 12</a><br>
+            <a href="http://dashboard-no.2.fluxus.org">Link 13</a><br>
+            <h3>Pizza Edition</h3>
+            <a href="https://data.abatek.com">Link 1</a><br>
+            <a href="https://urfunny.bot.nu">Link 2</a>a><br>
+            <a href="https://pizzaedition.realmzer.xyz">Link 3</a><br>
         </section>
     </div>
 
