--- a/suggestions.html
+++ b/suggestions.html
@@ -21,8 +21,15 @@
 
     <div id="content">
         <section>
-            <h1>Updates</h1>
-            <p>This is the updates page content.</p>
+
+            <h1>Submit Your Suggestion</h1>
+            <p>We'd love to hear your suggestions! Please fill out the form below:</p>
+
+            <!-- Embed Google Form -->
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeCVoqvEkdjQpaZwM6P56qWHeEh-kDUPyPpaxLjydFpQ1o_QA/viewform?embedded=true" 
+                    width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">
+                Loading…
+            </iframe>
         </section>
     </div>
 
