--- a/schedule.html
+++ b/schedule.html
@@ -21,8 +21,13 @@
 
     <div id="content">
         <section>
-            <h1>Updates</h1>
-            <p>This is the updates page content.</p>
+            <h1>Schedule</h1>
+
+            <!-- Embed Google Doc -->
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vSY-8Si-XA1Wm85EdsOvv_clz-FnTEG0AZM8jhFwiltEG0Dxvtx4Ywl3Ev-x6-gjSPmcC327N5Io3q9/pub?embedded=true" 
+                    width="640" height="480" frameborder="0" marginheight="0" marginwidth="0">
+                Loading…
+            </iframe>
         </section>
     </div>
 
