--- a/newsletter.html
+++ b/newsletter.html
@@ -21,8 +21,8 @@
 
     <div id="content">
         <section>
-            <h1>Updates</h1>
-            <p>This is the updates page content.</p>
+            <h1>Newsletter</h1>
+            <p>NOT YET IMPLEMENTED</p>
         </section>
     </div>
 
