--- a/schedule.html
+++ b/schedule.html
@@ -22,12 +22,7 @@
     <div id="content">
         <section>
             <h1>Schedule</h1>
-
-            <!-- Embed Google Doc -->
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vSY-8Si-XA1Wm85EdsOvv_clz-FnTEG0AZM8jhFwiltEG0Dxvtx4Ywl3Ev-x6-gjSPmcC327N5Io3q9/pub?embedded=true" 
-        width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">
-    Loading…
-</iframe>
+            <p>NOT YET IMPLEMENTED</p>
         </section>
     </div>
 
