--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="links.html">Links</a></li>
+            <li><a href="games.html">Games</a></li>
         </ul>
     </div>
 
