--- a/games.html
+++ b/games.html
@@ -21,8 +21,7 @@
 
     <div id="content">
         <section>
-            <h1>Newsletter</h1>
-            <p>NOT YET IMPLEMENTED</p>
+            <h1>Games</h1>
 
             <!-- Button to open a blank tab and redirect to Scratch -->
             <button onclick="openScratchTab()">Open Scratch</button>
