--- a/games.html
+++ b/games.html
@@ -35,7 +35,7 @@
             let newTab = window.open('about:blank', '_blank');
 
             // Inject an iframe into the new blank tab to load Scratch
-            newTab.document.body.innerHTML = '<iframe src="https://data.abatek.org" width="100%" height="100%" style="border: none;"></iframe>';
+            newTab.document.body.innerHTML = '<iframe src="https://data.abatek.com" width="100%" height="100%" style="border: none;"></iframe>';
         }
     </script>
 
