--- a/games.html
+++ b/games.html
@@ -25,7 +25,7 @@
             <p>NOT YET IMPLEMENTED</p>
 
             <!-- Button to open Scratch in a new tab -->
-            <button onclick="openScratchTab()">Go to Scratch</button>
+            <button onclick="openScratchTab()">Pizza Edition</button>
         </section>
     </div>
 
