--- a/links.html
+++ b/links.html
@@ -5,8 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Updates Page</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Custom Switch Styles */
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #333; /* Black when off */
+            transition: 0.4s;
+            border-radius: 34px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            border-radius: 50%;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: 0.4s;
+        }
+
+        input:checked + .slider {
+            background-color: #ff7f00; /* Orange when on */
+        }
+
+        input:checked + .slider:before {
+            transform: translateX(26px); /* Move the circle to the right */
+        }
+
+        /* Label for switch */
+        label {
+            font-size: 16px;
+            font-weight: bold;
+            margin-right: 10px;
+        }
+
+        /* Optional: Styling for the text above the switch */
+        .switch-container {
+            margin-bottom: 20px;
+        }
+
+        .switch-text {
+            font-size: 18px;
+            color: white;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
+
+    <!-- Text above the switch -->
+    <div class="switch-container">
+        <p class="switch-text">Open In about:blank</p>
+        <label class="switch">
+            <input type="checkbox" id="toggleIframe">
+            <span class="slider"></span>
+        </label>
+    </div>
 
     <div id="sidebar">
         <ul>
@@ -38,10 +112,28 @@
             <a href="http://dashboard-no.2.fluxus.org">Link 13</a><br>
             <h3>Pizza Edition</h3>
             <a href="https://data.abatek.com">Link 1</a><br>
-            <a href="https://urfunny.bot.nu">Link 2</a>a><br>
+            <a href="https://urfunny.bot.nu">Link 2</a><br>
             <a href="https://pizzaedition.realmzer.xyz">Link 3</a><br>
         </section>
     </div>
+
+    <script>
+        // Listen for changes on the toggle switch
+        document.getElementById('toggleIframe').addEventListener('change', function() {
+            if (this.checked) {
+                openPageInIframe();
+            }
+        });
+
+        function openPageInIframe() {
+            // Open the entire page in a new tab as an iframe
+            const currentPageURL = window.location.href; // Current page URL
+            let newTab = window.open('about:blank', '_blank'); // Open blank page
+            newTab.document.body.innerHTML = `
+                <iframe src="${currentPageURL}" width="100%" height="100%" style="border: none; margin: 0; padding: 0; overflow: hidden;"></iframe>
+            `;
+        }
+    </script>
 
 </body>
 </html>
