--- a/links.html
+++ b/links.html
@@ -6,81 +6,38 @@
     <title>Updates Page</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Custom Switch Styles */
-        .switch {
-            position: relative;
-            display: inline-block;
-            width: 60px;
-            height: 34px;
+        /* Checkbox Styles */
+        .checkbox-container {
+            margin-bottom: 20px;
+            font-size: 18px;
+            color: white;
         }
 
-        .switch input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #333; /* Black when off */
-            transition: 0.4s;
-            border-radius: 34px;
-        }
-
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 26px;
-            width: 26px;
-            border-radius: 50%;
-            left: 4px;
-            bottom: 4px;
-            background-color: white;
-            transition: 0.4s;
-        }
-
-        input:checked + .slider {
-            background-color: #ff7f00; /* Orange when on */
-        }
-
-        input:checked + .slider:before {
-            transform: translateX(26px); /* Move the circle to the right */
-        }
-
-        /* Label for switch */
-        label {
-            font-size: 16px;
-            font-weight: bold;
+        .checkbox-container input[type="checkbox"] {
             margin-right: 10px;
         }
 
-        /* Optional: Styling for the text above the switch */
-        .switch-container {
-            margin-bottom: 20px;
-        }
-
-        .switch-text {
+        /* Label for the checkbox */
+        label {
             font-size: 18px;
             color: white;
+            font-weight: bold;
+        }
+
+        /* For the text above the checkbox */
+        .switch-text {
+            font-size: 18px;
             margin-bottom: 10px;
+            color: white;
+        }
+
+        /* Optional: Styling for the checkbox when checked or unchecked */
+        .checkbox-container input:checked {
+            background-color: #ff7f00; /* Orange when on */
         }
     </style>
 </head>
 <body>
-
-    <!-- Text above the switch -->
-    <div class="switch-container">
-        <p class="switch-text">Open In about:blank</p>
-        <label class="switch">
-            <input type="checkbox" id="toggleIframe">
-            <span class="slider"></span>
-        </label>
-    </div>
 
     <div id="sidebar">
         <ul>
@@ -96,6 +53,15 @@
     <div id="content">
         <section>
             <h1>Updates</h1>
+
+            <!-- Text Above the Checkbox -->
+            <div class="checkbox-container">
+                <p class="switch-text">Open In about:blank</p>
+                <label>
+                    <input type="checkbox" id="toggleIframe"> Enable iframe
+                </label>
+            </div>
+
             <h3>Vortex</h3>
             <a href="http://killthetapeworms.oops.wtf">Link 1</a><br>
             <a href="http://dashboard.fluxus.org">Link 2</a><br>
@@ -118,7 +84,7 @@
     </div>
 
     <script>
-        // Listen for changes on the toggle switch
+        // Listen for changes on the checkbox
         document.getElementById('toggleIframe').addEventListener('change', function() {
             if (this.checked) {
                 openPageInIframe();
