--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
 <body>
 
+    <!-- Stars Background -->
+    <div class="stars"></div>
+
+    <!-- Sidebar -->
     <div id="sidebar">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -20,6 +16,7 @@
         </ul>
     </div>
 
+    <!-- Main Content -->
     <div id="content">
         <section>
             <h1>BLACKOUT</h1>
@@ -31,4 +28,3 @@
     <script src="script.js"></script>
 
 </body>
-</html>
