--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+    </head>
 <body>
 
-    <!-- Sidebar -->
     <div id="sidebar">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -9,10 +15,10 @@
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="links.html">Links</a></li>
+            <li><a href="games.html">Games</a></li>
         </ul>
     </div>
 
-    <!-- Main Content -->
     <div id="content">
         <section>
             <h1>BLACKOUT</h1>
@@ -24,3 +30,4 @@
     <script src="script.js"></script>
 
 </body>
+</html>
