--- a/index.html
+++ b/index.html
@@ -39,18 +39,8 @@
     </div>
 
     <script src="script.js"></script>
-    <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/67d5e66439faa519084f5a94/1imdonu3l';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+
+
+    <script src="https://minnit.chat/js/embed.js?c=1740011833" defer></script><span style="display: none;" class="minnit-chat-sembed" data-chatname="https://organizations.minnit.chat/107866883752407/Main?embed" data-style="width:90%; height:500px; max-height:90vh;">Chat</span><p class="powered-by-minnit"><a href="https://minnit.chat" target="_blank">Group chat provided by Minnit</a></p>
 </body>
 </html>
