--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <script src="script.js"></script>
 
 
-    <script src="https://minnit.chat/js/embed.js?c=1740011833" defer></script><span style="display: none;" class="minnit-chat-sembed" data-chatname="https://organizations.minnit.chat/107866883752407/Main?embed" data-style="width:90%; height:500px; max-height:90vh;">Chat</span><p class="powered-by-minnit"><a href="https://minnit.chat" target="_blank">Group chat provided by Minnit</a></p>
+    <!--<script src="https://minnit.chat/js/embed.js?c=1740011833" defer></script><span style="display: none;" class="minnit-chat-sembed" data-chatname="https://organizations.minnit.chat/107866883752407/Main?embed" data-style="width:90%; height:500px; max-height:90vh;">Chat</span><p class="powered-by-minnit"><a href="https://minnit.chat" target="_blank">Group chat provided by Minnit</a></p>-->
 </body>
 </html>
