--- a/ai.html
+++ b/ai.html
@@ -28,7 +28,7 @@
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
-                    "Authorization": "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"
+                    "Authorization": "Bearer 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"
                 },
                 body: JSON.stringify({
                     model: "gpt-3.5-turbo",
