--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="links.html">Links</a></li>
+            <li><a href="ai.html">AI</a></li>
         </ul>
     </div>
 
