--- a/ai.html
+++ b/ai.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<div id="sidebar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="updates.html">Updates</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="suggestions.html">Suggestions</a></li>
+            <li><a href="newsletter.html">Newsletter</a></li>
+            <li><a href="links.html">Links</a></li>
+            <li><a href="ai.html">AI</a></li>
+        </ul>
+    </div>
     <h2>AI Chatbot</h2>
     <script
     chatbot_id="67d6004e3dfe9893ec64a0a3"
