Update and rename ai.html to help.html

--- a/help.html
+++ b/help.html
@@ -15,7 +15,7 @@
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="links.html">Links</a></li>
-            <li><a href="ai.html">AI</a></li>
+            <li><a href="help.html">HELP</a></li>
         </ul>
     </div>
     <h2>AI Chatbot</h2>
