--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="links.html">Links</a></li>
             <li><a href="ai.html">AI</a></li>
+            <li><a href="help.html">Help</a></li>
         </ul>
     </div>
 
