--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="links.html">Links</a></li>
-            <li><a href="ai.html">AI</a></li>
+            <li><a href="gpt4all-installer-darwin.dmg">AI</a></li>
             <li><a href="help.html">Help</a></li>
         </ul>
     </div>
