--- a/updates.html
+++ b/updates.html
@@ -16,6 +16,8 @@
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="links.html">Links</a></li>
+            <li><a href="ai.html">AI</a></li>
+            <li><a href="help.html">Help</a></li>
         </ul>
     </div>
 
