--- a/help.html
+++ b/help.html
@@ -15,10 +15,15 @@
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
             <li><a href="links.html">Links</a></li>
-            <li><a href="help.html">HELP</a></li>
+            <li><a href="ai.html">AI</a></li>
+            <li><a href="help.html">Help</a></li>
         </ul>
     </div>
-    <h2>AI Chatbot</h2>
+    <div id="content">
+        <h1>Help</h1>
+        <p>You can contact us via email or ask an ai chatbot for assistance.</p>
+        <a href="mailto:857624@dpsk12.net,878417@dpsk12.net?subject=Blackout Assistance">Contact Us</a>
+    </div>
     <script
     chatbot_id="67d6004e3dfe9893ec64a0a3"
     data-type="default"
