--- a/ai.html
+++ b/ai.html
@@ -26,7 +26,9 @@
     <!-- Main Content of Your Page -->
     <div id="content">
         <section>
-            <h1>AI CHATBOT(BETA)</h1>
+            <h2>AI CHATBOT(BETA)</h2>
+            <iframe src="https://chatgpt.com" width="800" height="600"></iframe>
+            <p>Note we will add our own bot once in is complete, which we HOPE will be soon. (I'm talking to you Wade)</p>
         </section>
     </div>
 
