--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <!-- Main Content of Your Page -->
     <div id="content">
         <section>
-            <img src="https://github.com/The-dog-dude/Blackout/blob/main/Untitled%20design.png?raw=true" alt="Logo" width="200">
-            <h1>BLACKOUT</h1>
+            <div>
+                <img src="https://github.com/The-dog-dude/Blackout/blob/main/Untitled%20design.png?raw=true" alt="Logo" width="200">
+                <h1>BLACKOUT</h1>
+            </div>
             <p>Feel free to explore. The chat feature has not yet been implemented, so go here to chat:</p>
             <a href="https://docs.google.com/document/d/1CE9NFP0mq8NufBMOsrh_jLF28dCgkmwmDZ4JvGkHqrA/edit?tab=t.0" class="link">Chat</a>
         </section>
