--- a/squidgames.html
+++ b/squidgames.html
@@ -1,2 +1,32 @@
-<h1>Squid games online (cause why not)</h1>
-<iframe src="https://www.crazygames.com/embed/squid-game-online" style="width: 100%; height: 100%;" frameborder="0" allow="gamepad *;"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Squid Games Online</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <!-- Sidebar -->
+    <div id="sidebar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="updates.html">Updates</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="suggestions.html">Suggestions</a></li>
+            <li><a href="newsletter.html">Newsletter</a></li>
+            <li><a href="links.html">Links</a></li>
+            <li><a href="ai.html">AI</a></li>
+            <li><a href="help.html">Help</a></li>
+        </ul>
+    </div>
+
+    <!-- Main Content -->
+    <div id="content">
+        <h1>Squid Games Online (cause why not)</h1>
+        <iframe src="https://www.crazygames.com/embed/squid-game-online" frameborder="0" allow="gamepad *;"></iframe>
+    </div>
+
+</body>
+</html>
