--- a/squidgames.html
+++ b/squidgames.html
@@ -24,8 +24,8 @@
 
     <!-- Main Content -->
     <div id="content">
-        <h1>Squid Games Online (cause why not)</h1>
-        <iframe src="https://www.crazygames.com/embed/squid-game-online" frameborder="0" allow="gamepad *;"></iframe>
+        <h1>Tag (cause why not)</h1>
+        &lt;div class=&quot;tenor-gif-embed&quot; data-postid=&quot;12252979885254625751&quot; data-share-method=&quot;host&quot; data-aspect-ratio=&quot;1.76596&quot; data-width=&quot;100%&quot;&gt;&lt;a href=&quot;https://tenor.com/view/tag-thanos-squid-game-season-2-you%27re-in-top-gif-12252979885254625751&quot;&gt;Tag Thanos GIF&lt;/a&gt;from &lt;a href=&quot;https://tenor.com/search/tag-gifs&quot;&gt;Tag GIFs&lt;/a&gt;&lt;/div&gt; &lt;script type=&quot;text/javascript&quot; async src=&quot;https://tenor.com/embed.js&quot;&gt;&lt;/script&gt;
     </div>
 
 </body>
