--- a/squidgames.html
+++ b/squidgames.html
@@ -25,7 +25,7 @@
     <!-- Main Content -->
     <div id="content">
         <h1>Tag (cause why not)</h1>
-        &lt;div class=&quot;tenor-gif-embed&quot; data-postid=&quot;12252979885254625751&quot; data-share-method=&quot;host&quot; data-aspect-ratio=&quot;1.76596&quot; data-width=&quot;100%&quot;&gt;&lt;a href=&quot;https://tenor.com/view/tag-thanos-squid-game-season-2-you%27re-in-top-gif-12252979885254625751&quot;&gt;Tag Thanos GIF&lt;/a&gt;from &lt;a href=&quot;https://tenor.com/search/tag-gifs&quot;&gt;Tag GIFs&lt;/a&gt;&lt;/div&gt; &lt;script type=&quot;text/javascript&quot; async src=&quot;https://tenor.com/embed.js&quot;&gt;&lt;/script&gt;
+        <img src="https://media.tenor.com/6N0-XYZtJqMAAAAM/tag-thanos.gif" alt="Tag Thanos GIF" width="100%">
     </div>
 
 </body>
