--- a/squidgames.html
+++ b/squidgames.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Squid Games Online</title>
+    <title>Squid Games Emotes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,8 +24,11 @@
 
     <!-- Main Content -->
     <div id="content">
-        <h1>Tag (cause why not)</h1>
-        <img src="https://media.tenor.com/6N0-XYZtJqMAAAAM/tag-thanos.gif" alt="Tag Thanos GIF" width="100%">
+        <h1>Squid Game Emotes</h1>
+        <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmZ0bW9yMjFlNG5nM2xyNGdoY2x3enNrd3llamgwenVxeTlsbXZhaSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/4mzpvCZMXrsrDHXEaF/giphy.gif" 
+     alt="Thanos Tag GIF" 
+     style="width: 100%; max-width: 500px;">
+
     </div>
 
 </body>
