--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     document.getElementById("admin-btn").addEventListener("click", function() {
         let code = prompt("Enter code:");
         if (code === "thanos") {
-            window.location.href = "squidgames.html";
+            window.location.href = "";
         } else if (code !== null) {
             alert("Incorrect code!");
         }
