--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <script>
     document.getElementById("admin-btn").addEventListener("click", function() {
         let code = prompt("Enter code:");
-        if (code === "thanos") {
-            window.location.href = "";
+        if (code === "bruh123") {
+            window.location.href = "auction.html";
         } else if (code !== null) {
             alert("Incorrect code!");
         }
