--- a/squidgames.html
+++ b/squidgames.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Squid Games Emotes</title>
+    <title>Auction</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,11 +24,10 @@
 
     <!-- Main Content -->
     <div id="content">
-        <h1>Squid Game Emotes</h1>
-        <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmZ0bW9yMjFlNG5nM2xyNGdoY2x3enNrd3llamgwenVxeTlsbXZhaSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/4mzpvCZMXrsrDHXEaF/giphy.gif" 
-     alt="Thanos Tag GIF" 
-     style="width: 100%; max-width: 500px;">
-
+        <h1>Auction</h1>
+        <p>For my little robot thing cause wade wanted me to.</p>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfCsKQYLqmphJZqNJfP8k3wDaUpcPefjb-mUtAyNw5qmuRljw/viewform?embedded=true" width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        
     </div>
 
 </body>
