--- a/index.html
+++ b/index.html
@@ -21,15 +21,13 @@
             bottom: 30%;
             padding: 15px 30px;
             font-size: 20px;
-            color: white;
-            background-color: black;
-            border: 2px solid white;
+            color: red;
             cursor: pointer;
             transition: 0.3s;
+            border-radius: 10px
         }
 
         .button:hover {
-            background-color: darkred;
             border-color: darkred;
         }
     </style>
