--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             color: red;
             cursor: pointer;
             transition: 0.3s;
-            border-radius: 10px
+            border: 1px solid red;
+            border-radius: 50px
         }
 
         .button:hover {
+            color: darkred;
             border-color: darkred;
         }
     </style>
