--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
             bottom: 30%;
             padding: 15px 30px;
             font-size: 20px;
-            color: red;
+            color: black;
             cursor: pointer;
             transition: 0.3s;
             border: 1px solid red;
             border-radius: 50px
+            backround-color: darkred;
         }
 
         .button:hover {
-            color: darkred;
+            color: black;
             border-color: darkred;
+            backround-color: darkred;
         }
     </style>
 </head>
