--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             bottom: 30%;
             padding: 15px 30px;
             font-size: 20px;
-            color: black;
+            color: red;
             cursor: pointer;
             transition: 0.3s;
             border: 1px solid red;
@@ -29,7 +29,7 @@
         }
 
         .button:hover {
-            color: black;
+            color: darkred;
             border-color: darkred;
         }
     </style>
