--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <!-- Your Existing Sidebar -->
     <div id="sidebar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="updates.html">Updates</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="suggestions.html">Suggestions</a></li>
