--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                 <h1>BLACKOUT</h1>
             
             <p>Feel free to explore. The chat feature has not yet been implemented, so go here to chat:</p>
-            <a href="https://docs.google.com/document/d/1CE9NFP0mq8NufBMOsrh_jLF28dCgkmwmDZ4JvGkHqrA/edit?tab=t.0" class="link">Chat</a><br>
+            <a href="chat.html" class="link">Chat</a><br>
             <button id="admin-btn">Admin Panel</button>
 
 <script>
