--- a/chat.html
+++ b/chat.html
@@ -41,7 +41,7 @@
 
     <script>
         // Replace with your Ably API key
-        const ably = new Ably.Realtime("YOUR-ABLY-API-KEY");
+        const ably = new Ably.Realtime("iBX7Aw.-4oZBg:hW4eg6cFcOToKuBl32o8e61B5FMgjUoM9HoIXCqw3jg");
         const channel = ably.channels.get("chat-room");
 
         const chatbox = document.getElementById("chatbox");
