--- a/chat.html
+++ b/chat.html
@@ -34,7 +34,7 @@
     </div>
 
 <script>
-    const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
+    const ably = new Ably.Realtime("iBX7Aw.-4oZBg:hW4eg6cFcOToKuBl32o8e61B5FMgjUoM9HoIXCqw3jg");
     const channel = ably.channels.get("chat-room");
 
     let mutedUsers = {}; // Stores globally muted users
