--- a/chat.html
+++ b/chat.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Page Title</title>
+    <link rel="stylesheet" href="styles.css"
+  </head>
+<body>
 
+</body>
+</html>
