--- a/chat.html
+++ b/chat.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css"
   </head>
 <body>
-
+  <script src="ablychat.js" type="module"></script>
+  <ably-chat data-api-key="YOUR_API_KEY"></ably-chat>
 </body>
 </html>
