--- a/chat.html
+++ b/chat.html
@@ -7,6 +7,6 @@
   </head>
 <body>
   <script src="ablychat.js" type="module"></script>
-  <ably-chat data-api-key="YOUR_API_KEY"></ably-chat>
+  <ably-chat data-api-key="iBX7Aw.-4oZBg:hW4eg6cFcOToKuBl32o8e61B5FMgjUoM9HoIXCqw3jg"></ably-chat>
 </body>
 </html>
