Styles to da chat

--- a/chat.html
+++ b/chat.html
@@ -3,6 +3,7 @@
 <head>
   <title>Ably Chat</title>
   <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Simple Ably Chat</h1>
