--- a/404.html
+++ b/404.html
@@ -1,11 +1,10 @@
-<!-- 404.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found</title>
-    <link rel="stylesheet" href="styles.css">  <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
     <div class="error-page">
@@ -13,7 +12,5 @@
         <p>The page you're looking for cannot be found.</p>
         <a href="index.html" class="home-link">Back to Home</a>
     </div>
-
-    <script src="script.js"></script>  <!-- Link to your JS file if needed -->
 </body>
 </html>
