--- a/updates.html
+++ b/updates.html
@@ -44,9 +44,9 @@
                 Owen: i have opened up a march madness group-march madness is the college basketball tournament and you make brackets for it, you are required to participate and make at least one bracket or face punishment, bracketing is on the 17th, 18th, 19th and 20th<br>
                 Owen: there are now punishments listed below<br>
                 Owen: is now open to all: the grand opening is here<br>
-                Owen: new ranks for future members are out<br
+                Owen: new ranks for future members are out<br>
                 Owen: we now have separate documents for updates, suggestions, and schedule<br>
-                Owen: we are reviewing our vortex links as some of them simply don’t work during school, expect to see some link spots open<br
+                Owen: we are reviewing our vortex links as some of them simply don’t work during school, expect to see some link spots open<br>
                 Owen: we currently have 7 link spots open for vortex-but those should be filled in soon anyway<br>
                 Owen: we now also have some new pizza edition links with more websites coming soon<br>
 </p>
