--- a/Resources/newsletter.html
+++ b/Resources/newsletter.html
@@ -10,8 +10,8 @@
 
     <div id="sidebar">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="updates.html">Updates</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="resources.html">Resources</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
@@ -23,15 +23,8 @@
 
     <div id="content">
         <section>
-
-            <h1>Submit Your Suggestion</h1>
-            <p>We'd love to hear your suggestions! Please fill out the form below:</p>
-
-
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeCVoqvEkdjQpaZwM6P56qWHeEh-kDUPyPpaxLjydFpQ1o_QA/viewform?embedded=true" 
-                    width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">
-                Loading…
-            </iframe>
+            <h1>Newsletter</h1>
+            <p>NOT YET IMPLEMENTED</p>
         </section>
     </div>
 
