--- a/resources.html
+++ b/resources.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Updates Page</title>
+    <title>Blackout | Resources</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 
     <div id="sidebar">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="updates.html">Updates</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="resources.html">Resources</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
@@ -21,12 +22,8 @@
         </ul>
     </div>
 
-    <div id="content">
-        <section>
-            <h1>Newsletter</h1>
-            <p>NOT YET IMPLEMENTED</p>
-        </section>
-    </div>
+    <a href="updates.html"><button>Updates</button></a>
+
 
 </body>
 </html>
