--- a/Resources/schedule.html
+++ b/Resources/schedule.html
@@ -10,8 +10,8 @@
 
     <div id="sidebar">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="updates.html">Updates</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="resources.html">Resources</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
@@ -20,7 +20,7 @@
             <li><a href="help.html">Help</a></li>
         </ul>
     </div>
-
+    
     <div id="content">
         <section>
             <h1>Schedule</h1>
