--- a/Resources/suggestions.html
+++ b/Resources/suggestions.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI</title>
+    <title>Updates Page</title>
     <link rel="stylesheet" href="styles.css">
-  <script id="embedai" src="https://embedai.thesamur.ai/embedai.js" data-id="blackout-ai"></script>
 </head>
 <body>
-
 
     <div id="sidebar">
         <ul>
@@ -23,12 +21,17 @@
         </ul>
     </div>
 
- 
     <div id="content">
         <section>
-            <h2>AI CHATBOT(BETA)</h2>
-            <iframe src="https://chatgpt.com" width="800" height="600"></iframe>
-            <p>Note we will add our own bot once in is complete, which we HOPE will be soon. (I'm talking to you Wade)</p>
+
+            <h1>Submit Your Suggestion</h1>
+            <p>We'd love to hear your suggestions! Please fill out the form below:</p>
+
+
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeCVoqvEkdjQpaZwM6P56qWHeEh-kDUPyPpaxLjydFpQ1o_QA/viewform?embedded=true" 
+                    width="640" height="554" frameborder="0" marginheight="0" marginwidth="0">
+                Loading…
+            </iframe>
         </section>
     </div>
 
