--- a/blank.html
+++ b/blank.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI</title>
+    <title>Blackout | BLANK</title>
     <link rel="stylesheet" href="styles.css">
-  <script id="embedai" src="https://embedai.thesamur.ai/embedai.js" data-id="blackout-ai"></script>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-
 
     <div id="sidebar">
         <ul>
             <li><a href="home.html">Home</a></li>
-            <li><a href="resources.html">Resources</a></li>
+            <li><a href="updates.html">Updates</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
@@ -23,14 +22,6 @@
         </ul>
     </div>
 
- 
-    <div id="content">
-        <section>
-            <h2>AI CHATBOT(BETA)</h2>
-            <iframe src="https://chatgpt.com" width="800" height="600"></iframe>
-            <p>Note we will add our own bot once in is complete, which we HOPE will be soon. (I'm talking to you Wade)</p>
-        </section>
-    </div>
 
 </body>
 </html>
