--- a/help.html
+++ b/help.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="sidebar">
+    <div id="sidebar">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="updates.html">Updates</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="resources.html">Resources</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
