--- a/links.html
+++ b/links.html
@@ -41,8 +41,8 @@
 
     <div id="sidebar">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="updates.html">Updates</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="resources.html">Resources</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="suggestions.html">Suggestions</a></li>
             <li><a href="newsletter.html">Newsletter</a></li>
