Erm what the sigma

--- a/Resources/updates.html
+++ b/Resources/updates.html
@@ -24,31 +24,46 @@
     <div id="content">
         <section>
             <h1>Updates</h1>
-            <p>Owen: these will involve the new links page and others like events<br>
-                Owen: the first update is the upcoming schedule<br>
-                Owen: view this to see what updates are coming this week<br>
-                Owen: there is now a suggestions area<br>
-                Owen: leave your suggestions for the chat there<br>
-                Owen: there is also a newsletter where we post the latest important non-chat news<br>
-                Owen: finally there is a links page where we post new links to your favorite websites<br>
-                Owen: you can add link ideas in the suggestions box<br>
-                Owen: note: the chat will be cleared every day along with the suggestions after me and will review them<br>
-                Owen: the schedule and newsletter will be cleared after each week<br>
-                Owen: and finally when the links page gets too big we will remove it and put it on a separate document that we will link where it used to be, and the same will be done for the updates page<br>
-                Owen: you now can play the games we have made on github by copy and pasting the links<br>
-                Owen: if you want to invite a friend to the chat, you can ask for permission by labeling the name, email, and description<br>
-                Owen: everyone now has a job/rank<br>
-                Owen: your ranks will determine what you do and the color of your name/text<br>
-                Owen: if anyone is confused about their rank, ask me in the chat when it opens later today<br>
-                Owen: ranks are at the bottom<br>
-                Owen: i have opened up a march madness group-march madness is the college basketball tournament and you make brackets for it, you are required to participate and make at least one bracket or face punishment, bracketing is on the 17th, 18th, 19th and 20th<br>
-                Owen: there are now punishments listed below<br>
-                Owen: is now open to all: the grand opening is here<br>
-                Owen: new ranks for future members are out<br>
-                Owen: we now have separate documents for updates, suggestions, and schedule<br>
-                Owen: we are reviewing our vortex links as some of them simply don’t work during school, expect to see some link spots open<br>
-                Owen: we currently have 7 link spots open for vortex-but those should be filled in soon anyway<br>
-                Owen: we now also have some new pizza edition links with more websites coming soon<br>
+            <p>Catsbedabest: this is where updates will be posted by me and will<br>
+                Catsbedabest: these will involve the new links page and others like events<br>
+                Catsbedabest: the first update is the upcoming schedule<br>
+                Catsbedabest: view this to see what updates are coming this week<br>
+                Catsbedabest: there is now a suggestions area<br>
+                Catsbedabest: leave your suggestions for the chat there<br>
+                Catsbedabest: there is also a newsletter where we post the latest important non-chat news<br>
+                Catsbedabest: finally there is a links page where we post new links to your favorite websites<br>
+                Catsbedabest: you can add link ideas in the suggestions box<br>
+                Catsbedabest: note: the chat will be cleared every day along with the suggestions after me and will review them<br>
+                Catsbedabest: the schedule and newsletter will be cleared after each week<br>
+                Catsbedabest: and finally when the links page gets to big we will remove it and put it on a separate document that we will link where it used to be, and the same will be done for the updates page<br>
+                Catsbedabest: you now can play the games we have made on github by copy and pasting the links<br>
+                Catsbedabest: if you want to invite a friend to the chat, you can ask for permission by labeling the name, email, and description<br>
+                Catsbedabest: everyone now has a job/rank<br>
+                Catsbedabest: your ranks will determine what you do and the color of your name/text<br>
+                Catsbedabest: if anyone is confused about their rank, ask me in the chat when it opens later today<br>
+                Catsbedabest: ranks are at the bottom<br>
+                Catsbedabest: i have opened up a march madness group-march madness is the college basketball tournament and you make brackets for it, you are required to participate and make at least one bracket or face punishment, bracketing is on the 17th, 18th, 19th and 20th<br>
+                Catsbedabest: there are now punishments listed below<br>
+                Catsbedabest: is now open to all: the grand opening is here<br>
+                Catsbedabest: new ranks for future members are out <br>
+                Catsbedabest: we now have separate documents for updates, suggestions, and schedule<br>
+                Catsbedabest: we are reviewing our vortex links as some of them simply don’t work during school, expect to see some link spots open<br>
+                Catsbedabest: we currently have 7 link spots open for vortex-but those should be filled in soon anyway<br>
+                Catsbedabest: we now also have some new pizza edition links with more websites coming soon<br>
+                Catsbedabest: thedogdude has made a kind-of-website Blackout<br>
+                Catsbedabest: we have logo designs for the website on canva that you can view<br>
+                Catsbedabest: we are starting to work on another website that will be called spirit, planned to be released in 2027-2028. in case you were wondering, blackout is planned to be released in 2025, do to our need to get something out quickly, but we are planning on giving it a major update in 2026-2027<br>
+                Catsbedabest: we are hoping for an end goal of 16 different unique sites by 2040<br>
+                Catsbedabest: if you are wondering, the 3rd site will be called dusk, and the 4th will be serpentine- aiming for 2028 and 2030 release dates<br>
+                Catsbedabest: the chat is getting a major upgrade and staff work-and will be rejuvenated soon<br>
+                Catsbedabest: we now have partners, the first of which is Lunar (the chat)<br>
+                Catsbedabest: yeah data.abatek is blocked-the rumors are true. we do have at least 5 other working pizza edition links, so if you want to get back to pizzaing, go to our links page<br>
+                Catsbedabest: you may have noticed the chat has had a major renovation-hope you like the new update<br>
+                Catsbedabest: the schedule for the month of april and beyond is out<br>
+                Catsbedabest: we now have pages for every element of the site, as well as designs and future sites, where you can see what is coming after blackout as well as potential logos for all of the catsbedabest productions sites<br>
+                Catsbedabest: another massive reorganization. i hope you enjoy<br>
+                Catsbedabest: we now have both AI Links and Reports out<br>
+                h more websites coming soon<br>
 </p>
         </section>
     </div>
