--- a/Resources/rankapplications.html
+++ b/Resources/rankapplications.html
@@ -22,6 +22,10 @@
         </ul>
     </div>
 
+    <h1>Fill out an apllication for a higher rank here</h1>
+
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf29cXvXls_Azlv9h29KDlzwkpfHiHTFvnqSkT0OpgDXM9wvQ/viewform?embedded=true" width="640" height="855" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
 
 </body>
 </html>
