--- a/resources.html
+++ b/resources.html
@@ -22,7 +22,12 @@
         </ul>
     </div>
 
-    <a href="updates.html"><button>Updates</button></a>
+    <a href="Resources/updates.html"><button>Updates</button></a>
+    <a href="Resources/schedule.html"><button>Schedule</button></a>
+    <a href="Resources/suggestions.html"><button>Suggestions</button></a>
+    <a href="Resources/reports.html"><button>Reports</button></a>
+    <a href="Resources/rankapplications.html"><button>Rank Applications</button></a>
+    <a href="Resources/newsletter.html"><button>Newsletter</button></a>
 
 
 </body>
